--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ bower_components
 node_modules
 build
 spec/build
+.idea/.name
+.idea/encodings.xml
+.idea/jsLibraryMappings.xml
+.idea/libraries/ngQuickDate_node_modules.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/ngQuickDate.iml
+.idea/scopes/scope_settings.xml
+.idea/vcs.xml
+.idea/workspace.xml
